--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   translator: ^0.1.7  # Add this line to include the translator package
   get: ^4.6.5 
-
+  http: 0.13.6 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
