--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   translator: ^0.1.7  # Add this line to include the translator package
   get: ^4.6.5 
   http: 0.13.6 
-
+  flutter_dropzone: ^4.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
